[gd_scene load_steps=33 format=3 uid="uid://vlxyclnir7g8"]

[ext_resource type="Script" uid="uid://uidp4xw6xlon" path="res://scenes/starting_screen.gd" id="1_ihen6"]
[ext_resource type="Texture2D" uid="uid://cmwb0trcdph8g" path="res://images2/Zrzut ekranu 2025-10-04 224553.png" id="1_lyhl5"]
[ext_resource type="Texture2D" uid="uid://osou201nad5q" path="res://assets/sRaccoon_free.png" id="3_ih3ue"]
[ext_resource type="FontFile" uid="uid://b1jcjir01uihm" path="res://assets/KiwiSoda.ttf" id="3_l1ni3"]
[ext_resource type="AudioStream" uid="uid://dpkek6eti1byy" path="res://assets/track 3.wav" id="5_l1ni3"]
[ext_resource type="Script" uid="uid://wf0li5c1qt6j" path="res://scenes/options.gd" id="6_ih3ue"]
[ext_resource type="Script" uid="uid://d1omawwuoob3q" path="res://scenes/music_volume.gd" id="7_d085l"]
[ext_resource type="Script" uid="uid://nqnylxwtm64v" path="res://scenes/sfx_volume.gd" id="8_jtkxu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jix8l"]
texture = ExtResource("1_lyhl5")
modulate_color = Color(0.38884684, 0.41349068, 0.38192075, 1)

[sub_resource type="Theme" id="Theme_ekxnf"]

[sub_resource type="Theme" id="Theme_glbon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lyhl5"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38xwe"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1ni3"]
bg_color = Color(0.90544915, 0.8008384, 0.656528, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ao8a"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d085l"]
bg_color = Color(0.59555095, 0.47016132, 0.28853133, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0ddk"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7y80"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ls3l"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkfca"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7qc3"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5i5im"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="MeshTexture" id="MeshTexture_nlkkf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihen6"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ih3ue"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtkxu"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2wq7"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykxa6"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agcxa"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2lim"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(0.80277824, 0.6623942, 0.46359587, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Theme" id="Theme_qe12f"]
default_font = ExtResource("3_l1ni3")
default_font_size = 0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 0.2611084
offset_bottom = -1.5291748
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6463282, 1.613727)
script = ExtResource("1_ihen6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1147.0
offset_bottom = 642.0
scale = Vector2(0.6100592, 0.62318224)
color = Color(0.91552997, 0.819612, 0.6877281, 1)

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="Panel2" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jix8l")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color(0.7716946, 0.7394263, 0.62982154, 1)
layout_mode = 0
offset_left = -27.333553
offset_top = -260.88678
offset_right = 494.06104
offset_bottom = 108.69324
scale = Vector2(1.8301777, 1.8695467)
texture = ExtResource("3_ih3ue")

[node name="Main_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -413.8209
offset_top = -224.23096
offset_right = 234.17914
offset_bottom = 54.269043
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5647313, 0.5605443)
theme = SubResource("Theme_ekxnf")

[node name="Button" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_glbon")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_lyhl5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_38xwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l1ni3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_6ao8a")
theme_override_styles/hover = SubResource("StyleBoxFlat_d085l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_t0ddk")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_n7y80")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_6ls3l")
theme_override_styles/disabled = SubResource("StyleBoxFlat_dkfca")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_v7qc3")
theme_override_styles/focus = SubResource("StyleBoxFlat_5i5im")
text = "Start game"
icon = SubResource("MeshTexture_nlkkf")

[node name="Button3" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_lyhl5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ihen6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l1ni3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ih3ue")
theme_override_styles/hover = SubResource("StyleBoxFlat_d085l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jtkxu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_q2wq7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ykxa6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_agcxa")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_m2lim")
theme_override_styles/focus = SubResource("StyleBoxFlat_rhts7")
text = "Options"

[node name="Button2" type="Button" parent="Main_buttons"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxFlat_lyhl5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ihen6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_l1ni3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_l1ni3")
theme_override_styles/hover = SubResource("StyleBoxFlat_d085l")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jtkxu")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_q2wq7")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ykxa6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_agcxa")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_m2lim")
text = "Exit"

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 77.14136
offset_top = 276.37885
offset_right = -517.85864
offset_bottom = 367.37885
grow_horizontal = 2
rotation = -0.0022131763
theme = SubResource("Theme_qe12f")
theme_override_colors/font_color = Color(0.8039216, 0.6627451, 0.4627451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 90
text = "Racoon Tapper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_l1ni3")
autoplay = true
max_polyphony = 2
bus = &"Music"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 75.926544
offset_top = 270.182
offset_right = 865.9265
offset_bottom = 302.182
scale = Vector2(0.8982167, 0.8731093)
theme_override_colors/font_color = Color(0.8039216, 0.6627451, 0.4627451, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 24

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(86.25255, 179.7082)
rotation = -0.31721723
scale = Vector2(9.115439, 7.3919435)
texture = ExtResource("3_ih3ue")
region_enabled = true
region_rect = Rect2(17.5, 4, 27, 35)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(587.3677, 178.46886)
rotation = 0.22021715
scale = Vector2(9.115439, 7.3919435)
texture = ExtResource("3_ih3ue")
region_enabled = true
region_rect = Rect2(17.5, 4, 27, 35)

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 152.46048
offset_top = 44.61721
offset_right = 538.77466
offset_bottom = 258.40805
script = ExtResource("6_ih3ue")

[node name="Label" type="Label" parent="Options"]
layout_mode = 0
offset_left = 137.88261
offset_top = 13.013359
offset_right = 253.88261
offset_bottom = 45.01336
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Options"]
layout_mode = 0
offset_left = 9.718597
offset_top = 8.675568
offset_right = 59.718597
offset_bottom = 39.675568
theme_override_fonts/font = ExtResource("3_l1ni3")
text = "BACK"

[node name="music_volume" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 27.33356
offset_top = 86.7557
offset_right = 355.33618
offset_bottom = 102.7557
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("7_d085l")
audio_bus_name = "Music"

[node name="Label2" type="Label" parent="Options"]
layout_mode = 0
offset_left = 138.49002
offset_top = 55.771523
offset_right = 254.49002
offset_bottom = 87.77152
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 22
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx_volume" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 23.081675
offset_top = 140.66817
offset_right = 351.0843
offset_bottom = 156.66817
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("8_jtkxu")
audio_bus_name = "SFX"

[node name="Label3" type="Label" parent="Options"]
layout_mode = 0
offset_left = 134.23813
offset_top = 109.68399
offset_right = 250.23813
offset_bottom = 141.68399
theme_override_fonts/font = ExtResource("3_l1ni3")
theme_override_font_sizes/font_size = 22
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Main_buttons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main_buttons/Button3" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_buttons/Button2" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Button" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/music_volume" to="Options" method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Options/music_volume" to="Options/music_volume" method="_on_value_changed"]
[connection signal="value_changed" from="Options/sfx_volume" to="Options/sfx_volume" method="_on_value_changed"]
